fixed edit playlist overflow on mobile

--- a/src/styles/mobile.css
+++ b/src/styles/mobile.css
@@ -60,6 +60,11 @@
     top: 20px;
   }
 
+  .edit-playlist {
+    grid-template-columns: unset;
+    justify-items: center;
+  }
+
   .user-playlists-header { justify-content: center; }
 
   .user-playlists-wrap {
